kubernetes.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
    name: portfolio
    annotations:
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.entrypoints: websecure

spec:
    ingressClassName: traefik
    rules:
      - host: portfolio.valdum.dev
        http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                    service:
                        name: portfolio
                        port:
                            name: http-out

---
apiVersion: v1
kind: Service

metadata:
    name: portfolio

spec:
    type: ClusterIP
    selector:
        app: portfolio
    sessionAffinity: None
    ports:
      - name: http-out
        protocol: TCP
        port: 80
        targetPort: http-in

---
apiVersion: apps/v1
kind: Deployment

metadata:
    name: portfolio

spec:
    replicas: 1
    minReadySeconds: 15
    revisionHistoryLimit: 1

    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0

    selector:
        matchLabels:
            app: portfolio

    template:
        metadata:
            labels:
                app: portfolio

        spec:
            containers:
              - name: portfolio
                image: ghcr.io/v4ldum/portfolio:latest
                imagePullPolicy: Always

                ports:
                  - name: http-in
                    containerPort: 8080

                startupProbe:
                    httpGet:
                        path: /
                        port: http-in
                livenessProbe:
                    httpGet:
                        path: /
                        port: http-in
                readinessProbe:
                    timeoutSeconds: 3
                    httpGet:
                        path: /
                        port: http-in

                volumeMounts:
                  - name: config
                    mountPath: /etc/nginx/conf.d/
                    readOnly: true

            volumes:
              - name: config
                configMap:
                    name: portfolio-nginx-config
